yamls/cp/cpoperator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prophecy-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: prophecy
      name: prophecy-operator
      release: prophecy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: prophecy
        name: prophecy-operator
        release: prophecy
    spec:
      serviceAccountName: prophecy-operator
      imagePullSecrets:
        - name: prophecyregcred
      securityContext: {}
      containers:
        - name: prophecy-operator
          image: gcr.io/prophecy-deployments/prophecy-operator:visafinal
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 8383
          resources: {}
