yamls/cp/gitingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prophecy-gitserver
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: prophecy-letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers 'X-Frame-Options';
      server_tokens off;
      location ~ ^/explore/users(.*) {
         deny all;
         return 403;
      }
spec:
  tls:
    - hosts:
        - <replace_with_gitserver_ingress>
      secretName: <replace_with_gitserver_secret>
  rules:
    - host: <replace_with_gitserver_ingress>
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: gitserver
              servicePort: 3000
