yamls/cp/metagraphingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prophecy-metagraph
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
      location ~ ^/graphiql(.*) {
         deny all;
         return 403;
      }
spec:
  rules:
    - host: metagraph.prophecy.visa.cloud.prophecy.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: metagraph
              servicePort: 9004
