yamls/cp/sparkedgeingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prophecy-sparkedge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
spec:
  rules:
    - host: sparkedge.prophecy.visa.cloud.prophecy.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: sparkedge
              servicePort: 9005
